--- a/index.html
+++ b/index.html
@@ -9,23 +9,28 @@
     <body>
 
         <nav>
-            <a href="flexbox.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="">Link 2</a>
             <a href="">Link 3</a>
         </nav>
 
+              <main>
+                <div class="flexItem">
+                  <p>Hello</p>
+                </div>
 
-                <img src="img/1.jpg" alt="A dog">
+                <div class="flexItem">
+                  <p>Hello</p>
+                </div>
 
-                <img src="img/2.jpg" alt="Another dog">
+                <div class="flexItem">
+                  <p>Hello</p>
+                </div>
 
-                <img src="img/3.jpeg" alt="Something like a dog">
+                <div class="flexItem">
+                  <p>Hello</p>
+                </div>
 
-                <img src="img/4.jpeg" alt="Might be a dog">
-
-                <img src="img/5.jpeg" alt="Dogs are people too">
-
-                <img src="img/6.jpg" alt="Dogs are better">
-
+              </main>
     </body>
 </html>
