--- a/index.html
+++ b/index.html
@@ -3,34 +3,58 @@
     <head>
         <meta charset="utf-8">
         <title>Gallery</title>
-        <link rel="stylesheet" href="styles.css" type="text/css">
+        <link rel="stylesheet" href="styles.css"
+        type="text/css">
 
     </head>
     <body>
+
+        <img src="high.png">
+
+
 
         <nav>
             <a href="index.html">Home</a>
             <a href="">Link 2</a>
             <a href="">Link 3</a>
         </nav>
+        <div class="hero">
 
+          <h2>Make an appointment</h2>
+          <button>Book Me</button>
+        </div>
               <main>
                 <div class="flexItem">
-                  <p>Hello</p>
+                  <h3>Services</h3>
+                  <p>At Highland Beauty & Barber, we offer a full line of beauty and wellness services.</p>
+
+                  <p>We have a unique, team-based approach to our services that enables us to offer the best possible experience while also allowing convenient appointment scheduling. Further, the team-based approach lends itself to a well-educated staff that is always growing and learning from one another.</p>
                 </div>
 
                 <div class="flexItem">
-                  <p>Hello</p>
+                  <h3>Services</h3>
+                  <p>At Highland Beauty & Barber, we offer a full line of beauty and wellness services.</p>
+
+                  <p>We have a unique, team-based approach to our services that enables us to offer the best possible experience while also allowing convenient appointment scheduling. Further, the team-based approach lends itself to a well-educated staff that is always growing and learning from one another.</p>
                 </div>
 
                 <div class="flexItem">
-                  <p>Hello</p>
+                  <h3>Services</h3>
+                  <p>At Highland Beauty & Barber, we offer a full line of beauty and wellness services.</p>
+
+                  <p>We have a unique, team-based approach to our services that enables us to offer the best possible experience while also allowing convenient appointment scheduling. Further, the team-based approach lends itself to a well-educated staff that is always growing and learning from one another.</p>
                 </div>
 
                 <div class="flexItem">
-                  <p>Hello</p>
+                  <h3>Services</h3>
+                  <p>At Highland Beauty & Barber, we offer a full line of beauty and wellness services.</p>
+
+                  <p>We have a unique, team-based approach to our services that enables us to offer the best possible experience while also allowing convenient appointment scheduling. Further, the team-based approach lends itself to a well-educated staff that is always growing and learning from one another.</p>
                 </div>
 
               </main>
+              <footer>
+                <p>© 2019 Highland Beauty & Barber | <a href="#"> Back to top</p>
+              </footer>
     </body>
 </html>
