--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Gallery</title>
+        <title>Highland Beauty & Barber</title>
         <link rel="stylesheet" href="styles.css"
         type="text/css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     </head>
     <body>
 
-        <img class="logo" src="high.png">
+        <a href="index.html"><img class="logo" src="high.png"></a>
 
 
 
         <nav>
             <a href="index.html">Home</a>
-            <a href="">Link 2</a>
-            <a href="">Link 3</a>
+            <a href="about.html">Link 2</a>
+            <a href="contact.html">Link 3</a>
         </nav>
         <div class="hero">
 
@@ -54,7 +55,7 @@
 
               </main>
               <footer>
-                <p>© 2019 Highland Beauty & Barber | <a href="#"> Back to top</p>
+                <p> &copy; 2019 Highland Beauty &amp; Barber | <a href="#"> Back to top</p>
               </footer>
     </body>
 </html>
